--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 278d2fa
-	trimbase = 
+	trim = nao_interaction
+	base = 605fed2
+	trimbase = 278d2fa
 	parent = upstream
 	previous = 6d39590
