--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5a8cb99
-	trimbase = 
+	trim = nao_interaction_launchers
+	base = 979e17a
+	trimbase = 5a8cb99
 	parent = upstream
 	previous = 6d39590
