--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4b4590d
-	trimbase = 
+	trim = nao_vision
+	base = ad5f124
+	trimbase = 4b4590d
 	parent = upstream
 	previous = 6d39590
