--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 984c570
-	trimbase = 
+	trim = nao_interaction_msgs
+	base = b06f9f1
+	trimbase = 984c570
 	parent = upstream
 	previous = 6d39590
