--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e43fdaa
-	trimbase = 
+	trim = nao_audio
+	base = 15b61e9
+	trimbase = e43fdaa
 	parent = upstream
 	previous = 6d39590
