--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a576d88
+	base = 9eac662
 	trimbase = 
 	parent = debian/jade/nao_interaction_launchers
-	previous = 
+	previous = a576d88
