--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 44e21fc
+	base = 682b78f
 	trimbase = 
 	parent = debian/jade/nao_audio
-	previous = 
+	previous = 44e21fc
