--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eeed28a
+	base = b804504
 	trimbase = 
 	parent = debian/jade/nao_interaction_msgs
-	previous = 
+	previous = eeed28a
