--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 605fed2
+	base = ba8723d
 	trimbase = 
 	parent = release/jade/nao_interaction
-	previous = 
+	previous = 605fed2
