--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 02fd00d
+	base = 92212cd
 	trimbase = 
 	parent = debian/jade/nao_interaction
-	previous = 
+	previous = 02fd00d
