--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ad5f124
+	base = 78554ee
 	trimbase = 
 	parent = release/jade/nao_vision
-	previous = 
+	previous = ad5f124
