--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f437ee
+	base = 313d3fe
 	trimbase = 
 	parent = debian/jade/nao_vision
-	previous = 
+	previous = 0f437ee
