--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 979e17a
+	base = f161fd1
 	trimbase = 
 	parent = release/jade/nao_interaction_launchers
-	previous = 
+	previous = 979e17a
