--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2a8c889
+	base = 7576f53
 	trimbase = 
 	parent = rpm/jade/nao_interaction_launchers
-	previous = 
+	previous = 2a8c889
