--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 15b61e9
+	base = 1ac224f
 	trimbase = 
 	parent = release/jade/nao_audio
-	previous = 
+	previous = 15b61e9
