--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d0b157
+	base = f096177
 	trimbase = 
 	parent = rpm/jade/nao_audio
-	previous = 
+	previous = 6d0b157
