--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b06f9f1
+	base = a343ce2
 	trimbase = 
 	parent = release/jade/nao_interaction_msgs
-	previous = 
+	previous = b06f9f1
