--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee3a353
+	base = 28c06d6
 	trimbase = 
 	parent = rpm/jade/nao_interaction_msgs
-	previous = 
+	previous = ee3a353
