--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b28511e
+	base = d7a73ba
 	trimbase = 
 	parent = rpm/jade/nao_interaction
-	previous = 
+	previous = b28511e
