--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8432cba
+	base = e853a1c
 	trimbase = 
 	parent = rpm/jade/nao_vision
-	previous = 
+	previous = 8432cba
