--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7966fd0
-	trimbase = 
+	trim = nao_interaction
+	base = 862664b
+	trimbase = 7966fd0
 	parent = upstream
 	previous = 6d39590
