--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = acabb15
-	trimbase = 
+	trim = nao_audio
+	base = e7c6ae8
+	trimbase = acabb15
 	parent = upstream
 	previous = 6d39590
