--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9347de6
-	trimbase = 
+	trim = nao_vision
+	base = 35126f1
+	trimbase = 9347de6
 	parent = upstream
 	previous = 6d39590
