--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c20848a
-	trimbase = 
+	trim = nao_interaction_msgs
+	base = 6ca6670
+	trimbase = c20848a
 	parent = upstream
 	previous = 6d39590
