--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 271b41c
-	trimbase = 
+	trim = nao_interaction_launchers
+	base = dddb4d4
+	trimbase = 271b41c
 	parent = upstream
 	previous = 6d39590
