--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35126f1
+	base = c953aec
 	trimbase = 
 	parent = release/kinetic/nao_vision
-	previous = 
+	previous = 35126f1
