--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fdc45a0
+	base = 22729d6
 	trimbase = 
 	parent = debian/kinetic/nao_vision
-	previous = 
+	previous = fdc45a0
