--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 862664b
+	base = be53421
 	trimbase = 
 	parent = release/kinetic/nao_interaction
-	previous = 
+	previous = 862664b
