--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e42790f
+	base = a23cbb1
 	trimbase = 
 	parent = debian/kinetic/nao_interaction
-	previous = 
+	previous = e42790f
