--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0ce18f5
+	base = 2cc8514
 	trimbase = 
 	parent = debian/kinetic/nao_interaction_launchers
-	previous = 
+	previous = 0ce18f5
