--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e7c6ae8
+	base = f807ab3
 	trimbase = 
 	parent = release/kinetic/nao_audio
-	previous = 
+	previous = e7c6ae8
