--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 510679d
+	base = b19016b
 	trimbase = 
 	parent = debian/kinetic/nao_audio
-	previous = 
+	previous = 510679d
