--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6cf661e
+	base = 60fbcaf
 	trimbase = 
 	parent = debian/kinetic/nao_interaction_msgs
-	previous = 
+	previous = 6cf661e
