--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 01fea6b
+	base = fa28c2e
 	trimbase = 
 	parent = debian/kinetic/nao_vision
-	previous = 
+	previous = 01fea6b
