--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 70b6c1c
+	base = d9b921d
 	trimbase = 
 	parent = debian/kinetic/nao_interaction
-	previous = 
+	previous = 70b6c1c
