--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d9e0d2
+	base = 7856c5c
 	trimbase = 
 	parent = debian/kinetic/nao_interaction_launchers
-	previous = 
+	previous = 6d9e0d2
