--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 258f6f2
+	base = c2e3b52
 	trimbase = 
 	parent = debian/kinetic/nao_audio
-	previous = 
+	previous = 258f6f2
