--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7315b6
+	base = 6d3f8be
 	trimbase = 
 	parent = debian/kinetic/nao_interaction_msgs
-	previous = 
+	previous = d7315b6
