--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f03a0fc
+	base = 6919f00
 	trimbase = 
 	parent = rpm/kinetic/nao_vision
-	previous = 
+	previous = f03a0fc
