--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = df8ad4c
+	base = e972caf
 	trimbase = 
 	parent = rpm/kinetic/nao_interaction
-	previous = 
+	previous = df8ad4c
