--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dddb4d4
+	base = add4de0
 	trimbase = 
 	parent = release/kinetic/nao_interaction_launchers
-	previous = 
+	previous = dddb4d4
