--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 20bd606
+	base = 5bbf1fc
 	trimbase = 
 	parent = rpm/kinetic/nao_interaction_launchers
-	previous = 
+	previous = 20bd606
