--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e2fe5f8
+	base = e215f8e
 	trimbase = 
 	parent = rpm/kinetic/nao_audio
-	previous = 
+	previous = e2fe5f8
