--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6ca6670
+	base = 90fc7b2
 	trimbase = 
 	parent = release/kinetic/nao_interaction_msgs
-	previous = 
+	previous = 6ca6670
