--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b708828
+	base = 478235e
 	trimbase = 
 	parent = rpm/kinetic/nao_interaction_msgs
-	previous = 
+	previous = b708828
