--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_interaction_launchers
 	base = dddb4d4
-	trimbase = 271b41c
+	trimbase = 
 	parent = upstream
 	previous = 6d39590
