--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_interaction_launchers
-	base = 5404171
-	trimbase = 
+	base = 0f3923a
+	trimbase = 5404171
 	parent = upstream
 	previous = 6d39590
