--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_interaction
-	base = 03d4625
-	trimbase = 
+	base = d5fa24b
+	trimbase = 03d4625
 	parent = upstream
 	previous = 6d39590
