--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_vision
-	base = c14ca78
-	trimbase = 
+	base = 99d0df2
+	trimbase = c14ca78
 	parent = upstream
 	previous = 6d39590
