--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_interaction_msgs
 	base = 6ca6670
-	trimbase = c20848a
+	trimbase = 
 	parent = upstream
 	previous = 6d39590
