--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_interaction_msgs
-	base = ee66527
-	trimbase = 
+	base = 02014f7
+	trimbase = ee66527
 	parent = upstream
 	previous = 6d39590
