--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nao_audio
-	base = 91465dd
-	trimbase = 
+	base = e883161
+	trimbase = 91465dd
 	parent = upstream
 	previous = 6d39590
