--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99d0df2
+	base = 25752e7
 	trimbase = 
 	parent = release/kinetic/nao_vision
-	previous = 
+	previous = 99d0df2
