--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9aa5fc8
+	base = cbe92c1
 	trimbase = 
 	parent = arch/kinetic/nao_vision
-	previous = 
+	previous = 9aa5fc8
