--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d5fa24b
+	base = 04fc792
 	trimbase = 
 	parent = release/kinetic/nao_interaction
-	previous = 
+	previous = d5fa24b
