--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd2fcba
+	base = ddffdc9
 	trimbase = 
 	parent = arch/kinetic/nao_interaction
-	previous = 
+	previous = dd2fcba
