--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f3923a
+	base = e53f223
 	trimbase = 
 	parent = release/kinetic/nao_interaction_launchers
-	previous = 
+	previous = 0f3923a
