--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 055a8a4
+	base = 8047520
 	trimbase = 
 	parent = arch/kinetic/nao_interaction_launchers
-	previous = 
+	previous = 055a8a4
