--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e883161
+	base = 26731a2
 	trimbase = 
 	parent = release/kinetic/nao_audio
-	previous = 
+	previous = e883161
