--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 93486e9
+	base = e055489
 	trimbase = 
 	parent = arch/kinetic/nao_audio
-	previous = 
+	previous = 93486e9
