--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 02014f7
+	base = 4696545
 	trimbase = 
 	parent = release/kinetic/nao_interaction_msgs
-	previous = 
+	previous = 02014f7
