--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db0886f
+	base = 1e32a7a
 	trimbase = 
 	parent = arch/kinetic/nao_interaction_msgs
-	previous = 
+	previous = db0886f
